--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 #REACT_APP_METRIC_POSTS_API_URL = https://ms-livemet-metrics-dal-6rwr6t3zia-uc.a.run.app/livemet/metrics-dal/v1/metric-posts?type=Temperature
-REACT_APP_METRIC_POSTS_API_URL = http://localhost:8080/livemet/metrics-dal/v1/metric-posts?type=Temperature
+REACT_APP_METRIC_POSTS_API_URL = http://localhost:8080/livemet/metrics-dal/v1/metric-posts
+REACT_APP_CREATE_METRIC_POSTS_API_URL = http://localhost:8080/livemet/metrics-dal/v1/metric-posts
+REACT_APP_METRIC_TYPES_API_URL = http://localhost:8080/livemet/metrics-dal/v1/metric-types
