--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.94",
     "@mui/material": "^5.10.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "headlessui": "^0.0.0",
     "heroicons": "^1.0.6",
+    "mdb-react-ui-kit": "^4.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dimmer": "^1.0.7",
