--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 #REACT_APP_METRIC_POSTS_API_URL = https://ms-livemet-metrics-dal-6rwr6t3zia-uc.a.run.app/livemet/metrics-dal/v1/metric-posts?type=Temperature
 REACT_APP_METRIC_POSTS_API_CONTEXT_PATH = /livemet/metrics-dal/v1/metric-posts
 REACT_APP_METRIC_TYPES_API_CONTEXT_PATH = /livemet/metrics-dal/v1/metric-types
-REACT_APP_MS_LIVEMET_METRICS_DAL_HOST = http://localhost:8080
+#REACT_APP_MS_LIVEMET_METRICS_DAL_HOST = http://localhost:8080
+REACT_APP_MS_LIVEMET_METRICS_DAL_HOST = https://ms-livemet-metrics-dal-6rwr6t3zia-uc.a.run.app
